--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -4,14 +4,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.parse.starter.NewListActivity">
+    tools:context="com.parse.starter.NewListActivity"
+    android:id="@+id/">
 
     <TextView
         android:id="@+id/synclist_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:text="List Id"
         android:layout_below="@+id/saveButton"
         android:layout_centerHorizontal="true"
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingTop="30dp"
-        android:visibility="invisible">
+        android:visibility="visible">
     </EditText>
 
     <Button
@@ -57,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="12sp"
-        android:text="Shared With"
+        android:textSize="16sp"
+        android:text="Shared With:"
         android:layout_below="@+id/list_name"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -66,7 +67,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="200dp"
         android:id="@+id/shared_with"
         android:layout_weight="2"
         android:layout_below="@+id/textView2"
@@ -78,6 +79,24 @@
         android:layout_height="wrap_content"
         android:text="Share List"
         android:id="@+id/share_list_button"
+        android:layout_above="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="List Creator"
+        android:id="@+id/textView3"
+        android:layout_above="@+id/saveButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/permission_spinner"
         android:layout_below="@+id/shared_with"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
