--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -4,8 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.parse.starter.NewListActivity"
-    android:id="@+id/">
+    tools:context="com.syncusup.NewListActivity">
 
     <TextView
         android:id="@+id/synclist_id"
