--- a/app/src/main/res/layout/activity_edit_permissions.xml
+++ b/app/src/main/res/layout/activity_edit_permissions.xml
@@ -16,11 +16,21 @@
         android:layout_centerHorizontal="true" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/permission_spinner"
         android:layout_below="@+id/friend_name_txt"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="30dp" />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="Save Permissions"
+        android:id="@+id/edit_permit_save"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/synqusup_button_s"
+        android:layout_below="@+id/permission_spinner"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
