--- a/app/src/main/res/layout/activity_new_todo.xml
+++ b/app/src/main/res/layout/activity_new_todo.xml
@@ -28,7 +28,8 @@
         android:layout_weight="1"/>
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/whoCompleted"
         android:layout_width="wrap_content"
@@ -50,32 +51,46 @@
 </LinearLayout>
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:id="@+id/completeButton"
         android:visibility="visible"
         android:text="Complete"
         android:layout_weight="1"
+        android:background="@drawable/synqusup_button_s"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal" />
 
     <Button
         android:id="@+id/editButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="Edit"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:background="@drawable/synqusup_button_s"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center" />
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="@string/save"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:background="@drawable/synqusup_button_s"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center" />
 
     <Button
         android:id="@+id/deleteButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="@string/delete"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:background="@drawable/synqusup_button_s"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center" />
 
 </LinearLayout>
