added new buttons and menus

--- a/app/src/main/res/menu/menu_todo_list.xml
+++ b/app/src/main/res/menu/menu_todo_list.xml
@@ -19,7 +19,11 @@
         android:icon="@drawable/pencil_50"
         android:title="@string/edit_todos"
         android:showAsAction="ifRoom"/>
-
+    <item
+        android:id="@+id/goto_main_menu"
+        android:showAsAction="never"
+        android:title="Main Menu">
+    </item>
 
 
     <item
