--- a/app/src/main/res/menu/menu_show_lists.xml
+++ b/app/src/main/res/menu/menu_show_lists.xml
@@ -18,4 +18,9 @@
         android:showAsAction="ifRoom"
         android:title="@string/action_sync">
     </item>
+    <item
+        android:id="@+id/goto_main_menu"
+        android:showAsAction="never"
+        android:title="Main Menu">
+    </item>
 </menu>
