--- a/app/src/main/res/layout/activity_new_todo.xml
+++ b/app/src/main/res/layout/activity_new_todo.xml
@@ -10,15 +10,28 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="18sp"
-        android:text="parent list" />
-
+        android:text="parent list"
+        android:layout_gravity="center_horizontal" />
+    <TextView
+        android:id="@+id/todo_title_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="10sp"
+        android:text="Todo title" />
     <EditText
         android:id="@+id/todo_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingTop="30dp"/>
-
+    <TextView
+        android:id="@+id/todo_description_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="10sp"
+        android:text="Todo description" />
     <EditText
         android:id="@+id/description_text"
         android:layout_width="match_parent"
@@ -29,15 +42,15 @@
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/whoCompleted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="18sp"
-        android:text="whoCompleted "
-        android:visibility="visible" />
+        android:text="Completed By:  "
+        android:visibility="invisible" />
     <TextView
         android:id="@+id/dateCompleted"
         android:layout_width="wrap_content"
@@ -46,7 +59,7 @@
         android:textSize="18sp"
         android:text="dateCompleted "
         android:layout_toRightOf="@+id/whoCompleted"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
 </LinearLayout>
 
