--- a/app/src/main/res/menu/menu_edit_permissions.xml
+++ b/app/src/main/res/menu/menu_edit_permissions.xml
@@ -3,4 +3,9 @@
     tools:context="com.syncusup.EditPermissionsActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/goto_main_menu"
+        android:showAsAction="never"
+        android:title="Main Menu">
+    </item>
 </menu>
