--- a/app/src/main/res/menu/menu_share_list.xml
+++ b/app/src/main/res/menu/menu_share_list.xml
@@ -2,4 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="com.syncusup.ShareListActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/goto_main_menu"
+        android:showAsAction="never"
+        android:title="Main Menu">
+    </item>
 </menu>
