--- a/app/src/main/res/menu/menu_todo_list.xml
+++ b/app/src/main/res/menu/menu_todo_list.xml
@@ -15,10 +15,10 @@
         android:title="@string/action_sync">
     </item>
 
-    <item android:id="@+id/edit_todos"
+    <!-- <item android:id="@+id/edit_todos"
         android:icon="@drawable/pencil_50"
         android:title="@string/edit_todos"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom"/> -->
     <item
         android:id="@+id/goto_main_menu"
         android:showAsAction="never"
@@ -32,9 +32,4 @@
         android:title="@string/action_logout">
     </item>
 
-    <item
-        android:id="@+id/action_login"
-        android:showAsAction="never"
-        android:title="@string/action_login">
-    </item>
 </menu>
