--- a/app/src/main/res/menu/menu_view_notification.xml
+++ b/app/src/main/res/menu/menu_view_notification.xml
@@ -14,4 +14,9 @@
         android:showAsAction="never"
         android:title="@string/action_logout">
     </item>
+    <item
+        android:id="@+id/goto_main_menu"
+        android:showAsAction="never"
+        android:title="Main Menu">
+    </item>
 </menu>
