--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -47,6 +47,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/shared_with_label"
+        android:imeOptions="actionDone"
         android:layout_marginTop="20dp" />
 
     <ListView
