--- a/app/src/main/res/layout/activity_new_todo.xml
+++ b/app/src/main/res/layout/activity_new_todo.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,20 +21,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:text="Todo title" />
     <EditText
         android:id="@+id/todo_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingTop="30dp"/>
+        android:paddingTop="10dp"/>
     <TextView
         android:id="@+id/todo_description_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="10sp"
+        android:textSize="12sp"
+        android:imeOptions="actionDone"
         android:text="Todo description" />
     <EditText
         android:id="@+id/description_text"
@@ -48,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:textSize="12sp"
         android:text="Completed By:  "
         android:visibility="invisible" />
     <TextView
@@ -56,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:textSize="12sp"
         android:text="dateCompleted "
         android:layout_toRightOf="@+id/whoCompleted"
         android:visibility="invisible" />
@@ -74,21 +79,12 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal" />
 
+
     <Button
         android:id="@+id/editButton"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="Edit"
-        android:visibility="visible"
-        android:background="@drawable/synqus_button_selector"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center" />
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="@string/save"
         android:visibility="invisible"
         android:background="@drawable/synqus_button_selector"
         android:layout_marginTop="10dp"
@@ -106,4 +102,17 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center" />
 
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="@string/save"
+        android:visibility="invisible"
+        android:background="@drawable/synqus_button_selector"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center" />
+
+
 </LinearLayout>
+</ScrollView>
