--- a/app/src/main/res/layout/activity_view_friends.xml
+++ b/app/src/main/res/layout/activity_view_friends.xml
@@ -10,28 +10,33 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
+        android:layout_height="65dp"
         android:layout_gravity="center_horizontal"
         android:weightSum="1">
 
         <EditText
             android:layout_width="85dp"
             android:layout_height="match_parent"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:hint="Friend#"
-            android:layout_marginLeft="32dp"
+            android:imeOptions="actionDone"
             android:ems="10"
             android:id="@+id/inviteCode" />
 
         <Button
-            android:layout_width="105dp"
+            android:layout_width="99dp"
+            android:layout_height="match_parent"
+            android:text="View Calendar"
+            android:id="@+id/calendar" />
+
+        <Button
+            android:layout_width="88dp"
             android:layout_height="match_parent"
             android:text="Edit"
-            android:layout_marginLeft="32dp"
             android:id="@+id/edit" />
 
         <Button
-            android:layout_width="105dp"
+            android:layout_width="90dp"
             android:layout_height="match_parent"
             android:text="Remove"
             android:layout_marginLeft="1dp"
